--- a/mainpage.dox
+++ b/mainpage.dox
@@ -79,5 +79,37 @@
     A for this purposes sufficient introduction to the ASCII Legacy VTK File Format can be found on <a href="http://www.visitusers.org/index.php?title=ASCII_VTK_Files">http://www.visitusers.org/index.php?title=ASCII_VTK_Files</a>.
     
     \subsection sec2_6 Example Programm Calling Sequence
+    
+    \subsection sec2_7 Automated Script
+    
+\section sec3 Finding Bugs / Useful Tools
+
+    \subsection sec3_1 Sequential Debugging using GDB
+    <p>
+    <a href="http://www.gnu.org/software/gdb/">GDB</a> is a standard debugging tool and can be used to debug sequential versions of the programs. One can install GDB simply by typing:
+    
+    <b> <UL>
+    <LI>sudo apt-get install gdb
+    </UL> </b>
+    
+    A useful website, which covers the most important commands is <a href="http://www.unknownroad.com/rtfm/gdbtut/gdbbreak.html#BLINE">http://www.unknownroad.com/rtfm/gdbtut/gdbbreak.html#BLINE</a>    
+    
+    </p>
+    
+    \subsection sec3_2 Using Valgrind to check memory
+    <p>
+    <a href="http://valgrind.org/">Valgrind</a> is a debugging tool for monitoring memory usage. Basically it can be used to track down memory leaks, uninitialized variable or invalid pointer use. One can download Valgrind directly from the repository:
+    
+    <b> <UL>
+    <LI>sudo apt-get install valgrind
+    </UL> </b>
+    
+    An introduction, which covers the basic usage of Valgrid can be found under <a href="http://www.cprogramming.com/debugging/valgrind.html">http://www.cprogramming.com/debugging/valgrind.html</a>
+    </p>
+    
+    \subsection sec3_3 Parallel Debugging using totalview
+    
+    \subsection sec3_4 Vampir
+    <a href="http://www.vampir.eu/">Vampir</a>
 
 */
